# shade-model

./: CMakeLists.txt  LICENSE  Makefile  Makefile.orig  README.md  TODO  hourAngleTest.c  localHourAngle.c  main.c  parlib.h.gch  runPlots.m  solarAltTest.c  sunDeclination.c  sunDeclination.h  test.c  timeDifference.c  timeDifference.h
examples/ex1/: testHostfile
include/: azimuth.h  landReader.h  landStruct.h  localHourAngle.h  parlib.h  parlib_mpi.h  shadem.h  solarAltitude.h  sunDeclination.h  tilt.h  timeDifference.h
src/: azimuth.c  landReader.c  localHourAngle.c  main.c  parlib.c  parlib_mpi.c  solarAltitude.c  sunDeclination.c  tilt.c  timeDifference.c
